dynamic test environment