@@ -3,7 +3,6 @@ package Listeners;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
@@ -14,13 +13,11 @@ import org.apache.commons.io.FileUtils;
 import org.apache.http.entity.ContentType;
 import org.openqa.selenium.*;
 import org.openqa.selenium.chrome.ChromeOptions;
-import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
 import com.aventstack.extentreports.*;
 import com.aventstack.extentreports.reporter.ExtentHtmlReporter;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import io.appium.java_client.AppiumDriver;
 import io.appium.java_client.android.AndroidDriver;
@@ -28,7 +25,8 @@ import io.appium.java_client.android.options.UiAutomator2Options;
 import io.appium.java_client.service.local.AppiumDriverLocalService;
 import io.appium.java_client.service.local.AppiumServiceBuilder;
 import io.cucumber.java.Scenario;
-import io.cucumber.plugin.*;
+import io.cucumber.plugin.ConcurrentEventListener;
+import io.cucumber.plugin.Plugin;
 import io.cucumber.plugin.event.*;
 import io.cucumber.plugin.event.Status;
 import io.qameta.allure.Allure;
@@ -43,13 +41,14 @@ public class ParallelEventListenerCucumber implements ConcurrentEventListener, P
     public static AppiumDriverLocalService service = null;
     public static final String BASE_URL = System.getProperty("base.url", "https://default.url");
     public static final String BASEURI = System.getProperty("base.URI", "");
-public static ThreadLocal<Map<String,Object>>datamaps=null;
+
+    public static ThreadLocal<Map<String, Object>> datamaps = new ThreadLocal<>();
     public static ThreadLocal<Scenario> scenarios = new ThreadLocal<>();
     public static ThreadLocal<AppiumDriver> mobileDrivers = new ThreadLocal<>();
     public static ThreadLocal<WebDriver> drivers = new ThreadLocal<>();
     public static ThreadLocal<WebDriverUtils> webdriverUtils = new ThreadLocal<>();
     public static ThreadLocal<WebDriverWait> wait = new ThreadLocal<>();
-    public static ThreadLocal<Response>response=null;
+    public static ThreadLocal<Response> response = new ThreadLocal<>();
     public static ThreadLocal<JavascriptExecutor> js = new ThreadLocal<>();
     public static ThreadLocal<ExtentTest> extentTest = new ThreadLocal<>();
     public static ExtentReports report = null;
@@ -57,9 +56,7 @@ public static ThreadLocal<Map<String,Object>>datamaps=null;
     public static PropertiesFIlesHelper config = null;
     public static PropertiesFIlesHelper mobileObject = null;
     public static ThreadLocal<String> scenarioName = new ThreadLocal<>();
-    public static ThreadLocal<RequestSpecification>request=null;
-
-    private static URL gridUrl = null;
+    public static ThreadLocal<RequestSpecification> request = new ThreadLocal<>();
 
     @Override
     public void setEventPublisher(EventPublisher publisher) {
@@ -79,9 +76,10 @@ public static ThreadLocal<Map<String,Object>>datamaps=null;
         js = new ThreadLocal<>();
         scenarioName = new ThreadLocal<>();
         webdriverUtils = new ThreadLocal<>();
-request=new ThreadLocal<>();
-datamaps=new ThreadLocal<>();
-response=new ThreadLocal<>();
+        request = new ThreadLocal<>();
+        datamaps = new ThreadLocal<>();
+        response = new ThreadLocal<>();
+
         report = new ExtentReports();
         ExtentHtmlReporter htmlReporter = new ExtentHtmlReporter("extent-report.html");
         report.attachReporter(htmlReporter);
@@ -108,28 +106,27 @@ response=new ThreadLocal<>();
         extentTest.get().assignAuthor("Rohit Sharma");
         System.out.println("[START] " + name + " on Thread " + Thread.currentThread().getName());
 
-        try {
-            String gridUrlEnv = System.getenv("SELENIUM_GRID_URL");
-            if (gridUrlEnv == null || gridUrlEnv.isEmpty()) {
-                gridUrlEnv = "http://localhost:4444";
-            }
-            gridUrl = URI.create(gridUrlEnv).toURL();
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-            throw new RuntimeException("Invalid SELENIUM_GRID_URL: " + e.getMessage());
-        }
-
         if (event.getTestCase().getTags().contains("@Web")) {
-            if (!isSeleniumGridAvailable(gridUrl)) {
-                throw new RuntimeException("Selenium Grid not reachable at " + gridUrl);
-            }
-
+            WebDriver driver;
             ChromeOptions options = new ChromeOptions();
             options.setAcceptInsecureCerts(true);
             options.addArguments("--headless=new");
             options.setUnhandledPromptBehaviour(UnexpectedAlertBehaviour.IGNORE);
 
-            WebDriver driver = new RemoteWebDriver(gridUrl, options);
+            try {
+                URL gridUrl = new URL("http://localhost:4444");
+                if (isSeleniumGridAvailable(gridUrl)) {
+                    System.out.println("✅ Using RemoteWebDriver (Grid)");
+                    driver = new RemoteWebDriver(gridUrl, options);
+                } else {
+                    System.out.println("⚠️ Grid not available. Using local ChromeDriver.");
+                    driver = new org.openqa.selenium.chrome.ChromeDriver(options);
+                }
+            } catch (Exception e) {
+                System.out.println("❌ Grid detection failed. Using local ChromeDriver: " + e.getMessage());
+                driver = new org.openqa.selenium.chrome.ChromeDriver(options);
+            }
+
             drivers.set(new EventFiringClass().getDriver(driver));
             driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(30));
             driver.get(BASE_URL);
@@ -140,49 +137,48 @@ response=new ThreadLocal<>();
         }
 
         if (event.getTestCase().getTags().contains("@Mobile")) {
-            if (service == null || !service.isRunning()) {
+            try {
                 String androidHome = System.getenv("ANDROID_HOME");
                 Map<String, String> env = new HashMap<>(System.getenv());
                 env.put("ANDROID_HOME", androidHome);
                 env.put("PATH", androidHome + "/platform-tools:" + env.get("PATH"));
 
-                service = new AppiumServiceBuilder()
-                        .withEnvironment(env)
-                        .withAppiumJS(new File("/usr/local/lib/node_modules/appium/build/lib/main.js"))
-                        .withLogFile(new File("appium.log"))
-                        .withTimeout(Duration.ofSeconds(60))
-                        .usingPort(4725)
-                        .build();
-                service.start();
-            }
+                if (service == null || !service.isRunning()) {
+                    service = new AppiumServiceBuilder()
+                            .withEnvironment(env)
+                            .withAppiumJS(new File("/usr/local/lib/node_modules/appium/build/lib/main.js"))
+                            .withLogFile(new File("appium.log"))
+                            .usingPort(4725)
+                            .build();
+                    service.start();
+                }
 
-            UiAutomator2Options options = new UiAutomator2Options();
-            options.setDeviceName("pixel7");
-            options.setAutomationName("UIAutomator2");
-            options.setApp("/Users/rohitsharma/eclipse-workspace/Appium/ApiDemos-debug.apk");
+                UiAutomator2Options options = new UiAutomator2Options();
+                options.setDeviceName("pixel7");
+                options.setAutomationName("UIAutomator2");
+                options.setApp("/Users/rohitsharma/eclipse-workspace/Appium/ApiDemos-debug.apk");
 
-            try {
-                AppiumDriver driver = new AndroidDriver(URI.create("http://localhost:4725").toURL(), options);
+                AppiumDriver driver = new AndroidDriver(new URL("http://localhost:4725"), options);
                 driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
                 mobileDrivers.set(driver);
-            } catch (MalformedURLException e) {
-                e.printStackTrace();
-                throw new RuntimeException("Failed to create Appium driver.");
+
+            } catch (Exception e) {
+                System.err.println("❌ Failed to start Appium service or driver: " + e.getMessage());
+                throw new RuntimeException("Mobile test setup failed.");
             }
         }
+
         if (event.getTestCase().getTags().contains("@Api")) {
-        	request.set(RestAssured.given());
-        	System.out.println();
-        	request.get().baseUri(BASEURI);
-        	request.get().contentType(ContentType.APPLICATION_JSON.toString());
-        	request.get().header("x-api-key", "reqres-free-v1");
+            request.set(RestAssured.given()
+                .baseUri(BASEURI)
+                .contentType(ContentType.APPLICATION_JSON.toString())
+                .header("x-api-key", "reqres-free-v1"));
         }
     }
 
     private void handleTestStepStarted(TestStepStarted event) {
-        if (event.getTestStep() instanceof PickleStepTestStep) {
-            PickleStepTestStep currentStep = (PickleStepTestStep) event.getTestStep();
-            String stepText = currentStep.getStep().getKeyword() + currentStep.getStep().getText();
+        if (event.getTestStep() instanceof PickleStepTestStep step) {
+            String stepText = step.getStep().getKeyword() + step.getStep().getText();
             System.out.println("Test Step started: " + stepText);
             Allure.step(stepText);
         }
@@ -190,15 +186,15 @@ response=new ThreadLocal<>();
 
     private void handleTestStepFinished(TestStepFinished event) {
         if (event.getResult().getStatus() == Status.FAILED) {
-            File file = new File("screenshots/" + scenarioName.get() + ".png");
-
             try {
                 if (drivers.get() != null) {
                     TakesScreenshot ts = (TakesScreenshot) drivers.get();
                     byte[] screenshotBytes = ts.getScreenshotAs(OutputType.BYTES);
                     Allure.addAttachment("Screenshot - Failed Step", new ByteArrayInputStream(screenshotBytes));
-                    FileUtils.copyFile(ts.getScreenshotAs(OutputType.FILE), file);
-                    extentTest.get().addScreenCaptureFromPath(file.getAbsolutePath());
+
+                    File screenshotFile = new File("screenshots/" + scenarioName.get() + ".png");
+                    FileUtils.copyFile(ts.getScreenshotAs(OutputType.FILE), screenshotFile);
+                    extentTest.get().addScreenCaptureFromPath(screenshotFile.getAbsolutePath());
                 }
             } catch (Exception e) {
                 e.printStackTrace();
@@ -208,38 +204,34 @@ response=new ThreadLocal<>();
 
     private void handleTestCaseFinished(TestCaseFinished event) {
         System.out.println("[END] " + scenarioName.get() + " on Thread " + Thread.currentThread().getName());
-if(event.getResult().getStatus()==Status.FAILED||event.getResult().getError()!=null)
-{
-	extentTest.get().fail(event.getTestCase().getName());
-}
-        if (event.getTestCase().getTags().contains("@Web")) {
-            try {
-                if (drivers.get() != null) {
-                    drivers.get().quit();
-                    drivers.remove();
-                }
-            } catch (Exception e) {
-                System.err.println("Failed to quit web driver: " + e.getMessage());
-            }
+
+        if (event.getResult().getStatus() == Status.FAILED || event.getResult().getError() != null) {
+            extentTest.get().fail(event.getTestCase().getName());
         }
 
-        if (event.getTestCase().getTags().contains("@Mobile")) {
-            try {
-                if (mobileDrivers.get() != null) {
-                    mobileDrivers.get().quit();
-                    mobileDrivers.remove();
-                }
-                if (service != null && service.isRunning()) {
-                    service.stop();
-                    System.out.println("Appium Service stopped after all tests");
-                }
-            } catch (Exception e) {
-                System.err.println("Failed to quit mobile driver: " + e.getMessage());
+        try {
+            if (event.getTestCase().getTags().contains("@Web") && drivers.get() != null) {
+                drivers.get().quit();
+                drivers.remove();
             }
+
+            if (event.getTestCase().getTags().contains("@Mobile") && mobileDrivers.get() != null) {
+                mobileDrivers.get().quit();
+                mobileDrivers.remove();
+            }
+
+            if (event.getTestCase().getTags().contains("@Api")) {
+                request.remove();
+            }
+        } catch (Exception e) {
+            System.err.println("❌ Cleanup failed: " + e.getMessage());
         }
-        if (event.getTestCase().getTags().contains("@Api")) {
-        	request.remove();
+
+        if (service != null && service.isRunning()) {
+            service.stop();
+            System.out.println("🛑 Appium Service stopped");
         }
+
         scenarioName.remove();
     }
 
@@ -249,11 +241,9 @@ if(event.getResult().getStatus()==Status.FAILED||event.getResult().getError()!=n
             connection.setConnectTimeout(3000);
             connection.setReadTimeout(3000);
             connection.setRequestMethod("GET");
-            int responseCode = connection.getResponseCode();
-            System.out.println("Selenium Grid response code: " + responseCode);
-            return (responseCode == 200 || responseCode == 301 || responseCode == 302);
+            int code = connection.getResponseCode();
+            return (code == 200 || code == 301 || code == 302);
         } catch (Exception e) {
-            System.err.println("Could not connect to Selenium Grid: " + e.getMessage());
             return false;
         }
     }
